projeto quitanda - adicionando area de paginacao e ordenacao no final da listagem de produtos

--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -79,7 +79,7 @@
         <hr class="mt-3" />
     </header>
 
-    <main>
+    <main class="mb-5 pb-5 mb-md-0">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-5">
@@ -448,6 +448,41 @@
                             <small class="text-success">320,5Kg em estoque</small>
                         </div>
                     </div>
+                </div>
+            </div>
+            <hr class="mt-3" >
+            <div class="row pb-4">
+                <div class="col-12">
+                
+                    <div class="d-flex flex-row-reverse justify-content-center justify-content-md-start">
+                        <form class="d-inline-block">
+                            <select class="form-select form-select-sm">
+                                <option>Ordernar pelo nome</option>
+                                <option>Ordernar pelo menor preco</option>
+                                <option>Ordernar pelo maior preco</option>
+                            </select>
+                        </form>
+                        <nav class="d-inline-block me-3">
+                            <ul class="pagination pagination-sm my-0">
+                                <li class="page-item">
+                                    <button class="page-link">1</button>
+                                </li>
+                                <li class="page-item">
+                                    <button class="page-link">2</button>
+                                </li>
+                                <li class="page-item dissabled">
+                                    <button class="page-link">3</button>
+                                </li>
+                                <li class="page-item">
+                                    <button class="page-link">4</button>
+                                </li>
+                                <li class="page-item">
+                                    <button class="page-link">5</button>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                
                 </div>
             </div>
         </div>
