projeto quitanda - corrige combo de ordenacao

--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -458,8 +458,8 @@
                         <form class="d-inline-block">
                             <select class="form-select form-select-sm">
                                 <option>Ordernar pelo nome</option>
-                                <option>Ordernar pelo menor preco</option>
-                                <option>Ordernar pelo maior preco</option>
+                                <option>Ordernar pelo menor preço</option>
+                                <option>Ordernar pelo maior preço</option>
                             </select>
                         </form>
                         <nav class="d-inline-block me-3">
