projeto quitanda - truncate da texto da desccricao do card

--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Quitanda Online :: Página Principal</title>
+    <style>
+        p.truncate-3l {
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    </style>
 </head>
 
 <body style="min-width: 372px;">
@@ -138,7 +147,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Banana Prata</h5>
-                            <p class="card-text">
+                            <p class="card-text truncate-3l">
                                 Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
                             </p>
                         </div>
@@ -165,7 +174,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Banana Prata</h5>
-                            <p class="card-text">
+                            <p class="card-text truncate-3l">
                                 Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
                             </p>
                         </div>
@@ -192,7 +201,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Banana Prata</h5>
-                            <p class="card-text">
+                            <p class="card-text truncate-3l">
                                 Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
                             </p>
                         </div>
@@ -219,7 +228,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Banana Prata</h5>
-                            <p class="card-text">
+                            <p class="card-text truncate-3l">
                                 Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
                             </p>
                         </div>
@@ -246,7 +255,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Banana Prata</h5>
-                            <p class="card-text">
+                            <p class="card-text truncate-3l">
                                 Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
                             </p>
                         </div>
@@ -273,7 +282,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Banana Prata</h5>
-                            <p class="card-text">
+                            <p class="card-text truncate-3l">
                                 Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
                             </p>
                         </div>
@@ -300,7 +309,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Banana Prata</h5>
-                            <p class="card-text">
+                            <p class="card-text truncate-3l">
                                 Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
                             </p>
                         </div>
@@ -327,7 +336,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Banana Prata</h5>
-                            <p class="card-text">
+                            <p class="card-text truncate-3l">
                                 Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
                             </p>
                         </div>
@@ -354,7 +363,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Banana Prata</h5>
-                            <p class="card-text">
+                            <p class="card-text truncate-3l">
                                 Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
                             </p>
                         </div>
@@ -381,7 +390,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Banana Prata</h5>
-                            <p class="card-text">
+                            <p class="card-text truncate-3l">
                                 Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
                             </p>
                         </div>
@@ -408,7 +417,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Banana Prata</h5>
-                            <p class="card-text">
+                            <p class="card-text truncate-3l">
                                 Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
                             </p>
                         </div>
@@ -435,7 +444,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Banana Prata</h5>
-                            <p class="card-text">
+                            <p class="card-text truncate-3l">
                                 Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
                             </p>
                         </div>
