projeto quitanda - estilo de quando produto estiver esgotado

--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -206,12 +206,12 @@
                             </p>
                         </div>
                         <div class="card-footer">
-                            <form class="d-block ">
-                                <button class="btn btn-danger">
-                                    Adicionar ao Carrinho
+                            <div>
+                                <button class="btn btn-light disabled" disabled>
+                                    <small>Reabastecendo estoque</small>
                                 </button>
-                            </form>
-                            <small class="text-success">320,5Kg em estoque</small>
+                            </div>
+                            <small class="text-danger"><b>Produto Esgotado</b></small>
                         </div>
                     </div>
                 </div>
