--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -28,10 +28,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Principal</a>
+                        <a class="nav-link text-white" href="/index.html">Principal</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Politica de Privacidade</a>
+                        <a class="nav-link text-white" href="/contato.html">Contato</a>
                     </li>
                 </ul>
             </div>
