--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -88,7 +88,7 @@
         <hr class="mt-3" />
     </header>
 
-    <main class="mb-5 pb-5 mb-md-0">
+    <main>
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-5">
@@ -496,6 +496,10 @@
             </div>
         </div>
     </main>
+
+    <div style="height: 273px;" class="d-block d-md-none"></div>
+    <div style="height: 153px;" class="d-none d-md-block d-lg-none"></div>
+    <div style="height: 129px;" class="d-none d-lg-block"></div>
 
     <footer class="border-top fixed-bottom text-muted bg-light">
         <div class="container">
