--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -505,13 +505,20 @@
         <div class="container">
             <div class="row py-3">
                 <div class="col-12 col-md-4 text-center text-md-left">
-                    &copy; 2020 - Quitanda Online
+                    &copy; 2020 - Quitanda Online ltda ME<br>
+                    Rua Virtual Inexistente, 171, Computolandia/PC<br>
+                    CPNJ 99.999.999/001-99
                 </div>
                 <div class="col-12 col-md-4 text-center">
-                    <a href="#" class="text-decoration-none text-dark">Politica de Privacidade</a>
+                    <a href="/privacidade.html" class="text-decoration-none text-dark">Politica de Privacidade</a>
+                    <a href="/termos.html" class="text-decoration-none text-dark">Termos de Uso</a>
+                    <a href="/quemsomos.html" class="text-decoration-none text-dark">Quem somos</a>
+                    <a href="/tocas.html" class="text-decoration-none text-dark">Trocas e Devoluções</a>
                 </div>
                 <div class="col-12 col-md-4 text-center text-md-right">
-                    <a href="#" class="text-decoration-none text-dark">Administrar</a>
+                    <a href="/contato.html" class="text-decoration-none text-dark">Contato pelo site</a>
+                    E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">email@dominio.com</a>
+                    Telefone: <a href="phone:2899999999" class="text-decoration-none text-dark">(28) 99999-99999</a>
                 </div>
             </div>
         </div>
