projeto quitanda - criando a pagina quem somos

--- a/quitanda/quemsomos.html
+++ b/quitanda/quemsomos.html
@@ -60,7 +60,7 @@
 
     <main>
         <div class="container">
-            <h1>Quem somos</h1>
+            <h1>Quem Somos</h1>
             <hr>
             <p>
                 Quitanda Online é uma loja virtual (e-commerce) fictícia criada como estudo de caso para o curso
