projeto quitanda - melhora secao footer

--- a/quitanda/base.html
+++ b/quitanda/base.html
@@ -57,37 +57,91 @@
         </div>
     </nav>
 
- 
+
     <main>
         <div class="container">
             <h1>Titulo da Pagina</h1>
             <hr>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eveniet dolore amet consectetur magnam earum provident molestiae reiciendis doloremque suscipit dolorem eius quod iusto voluptates, tempora repellendus unde cum sapiente! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate optio perferendis similique consequatur soluta quasi sequi tempore eius maxime, porro quis, tenetur omnis nesciunt eaque quia perspiciatis dolorem dignissimos dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur similique laborum corporis cumque nesciunt, ipsam iure quas, tempora delectus blanditiis ad consequatur? Iure mollitia dolore voluptatibus nobis nemo odio?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eveniet dolore amet consectetur magnam
+                earum provident molestiae reiciendis doloremque suscipit dolorem eius quod iusto voluptates, tempora
+                repellendus unde cum sapiente! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate optio
+                perferendis similique consequatur soluta quasi sequi tempore eius maxime, porro quis, tenetur omnis
+                nesciunt eaque quia perspiciatis dolorem dignissimos dolorum? Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Dolorum consequuntur similique laborum corporis cumque nesciunt, ipsam iure quas,
+                tempora delectus blanditiis ad consequatur? Iure mollitia dolore voluptatibus nobis nemo odio?
             </p>
             <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae omnis, aliquid quas veritatis dolor corrupti at culpa aliquam sint incidunt. Totam eum quisquam numquam debitis eius minus a error ad. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem libero sequi quis cumque quibusdam architecto natus molestiae officiis quae odio dicta ad laborum, est vitae officia iure sit in excepturi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus enim quisquam quibusdam officiis placeat soluta aliquid dolorum et, aut labore alias nam repudiandae voluptates laborum suscipit mollitia perferendis iusto. Ipsa?
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae omnis, aliquid quas veritatis
+                dolor corrupti at culpa aliquam sint incidunt. Totam eum quisquam numquam debitis eius minus a error ad.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem libero sequi quis cumque quibusdam
+                architecto natus molestiae officiis quae odio dicta ad laborum, est vitae officia iure sit in excepturi.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus enim quisquam quibusdam officiis placeat
+                soluta aliquid dolorum et, aut labore alias nam repudiandae voluptates laborum suscipit mollitia
+                perferendis iusto. Ipsa?
             </p>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero officia magni, eum culpa id alias minus quae, excepturi necessitatibus aliquid laboriosam expedita tempora odit consectetur adipisci! Saepe quidem labore eius! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptate necessitatibus tempore sint nam nihil sapiente. Ducimus quos modi eos illo magnam quae doloribus repellendus? Voluptatum magni accusantium tempora vel! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, ab? Dolore optio hic inventore animi quis illum quo pariatur eligendi eum, labore, neque, enim sit tempore consequatur! Accusamus, reprehenderit quo?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero officia magni, eum culpa id alias minus
+                quae, excepturi necessitatibus aliquid laboriosam expedita tempora odit consectetur adipisci! Saepe
+                quidem labore eius! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptate
+                necessitatibus tempore sint nam nihil sapiente. Ducimus quos modi eos illo magnam quae doloribus
+                repellendus? Voluptatum magni accusantium tempora vel! Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Itaque, ab? Dolore optio hic inventore animi quis illum quo pariatur eligendi eum,
+                labore, neque, enim sit tempore consequatur! Accusamus, reprehenderit quo?
             </p>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eveniet dolore amet consectetur magnam earum provident molestiae reiciendis doloremque suscipit dolorem eius quod iusto voluptates, tempora repellendus unde cum sapiente! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate optio perferendis similique consequatur soluta quasi sequi tempore eius maxime, porro quis, tenetur omnis nesciunt eaque quia perspiciatis dolorem dignissimos dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur similique laborum corporis cumque nesciunt, ipsam iure quas, tempora delectus blanditiis ad consequatur? Iure mollitia dolore voluptatibus nobis nemo odio?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eveniet dolore amet consectetur magnam
+                earum provident molestiae reiciendis doloremque suscipit dolorem eius quod iusto voluptates, tempora
+                repellendus unde cum sapiente! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate optio
+                perferendis similique consequatur soluta quasi sequi tempore eius maxime, porro quis, tenetur omnis
+                nesciunt eaque quia perspiciatis dolorem dignissimos dolorum? Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Dolorum consequuntur similique laborum corporis cumque nesciunt, ipsam iure quas,
+                tempora delectus blanditiis ad consequatur? Iure mollitia dolore voluptatibus nobis nemo odio?
             </p>
             <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae omnis, aliquid quas veritatis dolor corrupti at culpa aliquam sint incidunt. Totam eum quisquam numquam debitis eius minus a error ad. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem libero sequi quis cumque quibusdam architecto natus molestiae officiis quae odio dicta ad laborum, est vitae officia iure sit in excepturi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus enim quisquam quibusdam officiis placeat soluta aliquid dolorum et, aut labore alias nam repudiandae voluptates laborum suscipit mollitia perferendis iusto. Ipsa?
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae omnis, aliquid quas veritatis
+                dolor corrupti at culpa aliquam sint incidunt. Totam eum quisquam numquam debitis eius minus a error ad.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem libero sequi quis cumque quibusdam
+                architecto natus molestiae officiis quae odio dicta ad laborum, est vitae officia iure sit in excepturi.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus enim quisquam quibusdam officiis placeat
+                soluta aliquid dolorum et, aut labore alias nam repudiandae voluptates laborum suscipit mollitia
+                perferendis iusto. Ipsa?
             </p>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero officia magni, eum culpa id alias minus quae, excepturi necessitatibus aliquid laboriosam expedita tempora odit consectetur adipisci! Saepe quidem labore eius! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptate necessitatibus tempore sint nam nihil sapiente. Ducimus quos modi eos illo magnam quae doloribus repellendus? Voluptatum magni accusantium tempora vel! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, ab? Dolore optio hic inventore animi quis illum quo pariatur eligendi eum, labore, neque, enim sit tempore consequatur! Accusamus, reprehenderit quo?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero officia magni, eum culpa id alias minus
+                quae, excepturi necessitatibus aliquid laboriosam expedita tempora odit consectetur adipisci! Saepe
+                quidem labore eius! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptate
+                necessitatibus tempore sint nam nihil sapiente. Ducimus quos modi eos illo magnam quae doloribus
+                repellendus? Voluptatum magni accusantium tempora vel! Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Itaque, ab? Dolore optio hic inventore animi quis illum quo pariatur eligendi eum,
+                labore, neque, enim sit tempore consequatur! Accusamus, reprehenderit quo?
             </p>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eveniet dolore amet consectetur magnam earum provident molestiae reiciendis doloremque suscipit dolorem eius quod iusto voluptates, tempora repellendus unde cum sapiente! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate optio perferendis similique consequatur soluta quasi sequi tempore eius maxime, porro quis, tenetur omnis nesciunt eaque quia perspiciatis dolorem dignissimos dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur similique laborum corporis cumque nesciunt, ipsam iure quas, tempora delectus blanditiis ad consequatur? Iure mollitia dolore voluptatibus nobis nemo odio?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eveniet dolore amet consectetur magnam
+                earum provident molestiae reiciendis doloremque suscipit dolorem eius quod iusto voluptates, tempora
+                repellendus unde cum sapiente! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate optio
+                perferendis similique consequatur soluta quasi sequi tempore eius maxime, porro quis, tenetur omnis
+                nesciunt eaque quia perspiciatis dolorem dignissimos dolorum? Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Dolorum consequuntur similique laborum corporis cumque nesciunt, ipsam iure quas,
+                tempora delectus blanditiis ad consequatur? Iure mollitia dolore voluptatibus nobis nemo odio?
             </p>
             <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae omnis, aliquid quas veritatis dolor corrupti at culpa aliquam sint incidunt. Totam eum quisquam numquam debitis eius minus a error ad. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem libero sequi quis cumque quibusdam architecto natus molestiae officiis quae odio dicta ad laborum, est vitae officia iure sit in excepturi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus enim quisquam quibusdam officiis placeat soluta aliquid dolorum et, aut labore alias nam repudiandae voluptates laborum suscipit mollitia perferendis iusto. Ipsa?
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae omnis, aliquid quas veritatis
+                dolor corrupti at culpa aliquam sint incidunt. Totam eum quisquam numquam debitis eius minus a error ad.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem libero sequi quis cumque quibusdam
+                architecto natus molestiae officiis quae odio dicta ad laborum, est vitae officia iure sit in excepturi.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus enim quisquam quibusdam officiis placeat
+                soluta aliquid dolorum et, aut labore alias nam repudiandae voluptates laborum suscipit mollitia
+                perferendis iusto. Ipsa?
             </p>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero officia magni, eum culpa id alias minus quae, excepturi necessitatibus aliquid laboriosam expedita tempora odit consectetur adipisci! Saepe quidem labore eius! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptate necessitatibus tempore sint nam nihil sapiente. Ducimus quos modi eos illo magnam quae doloribus repellendus? Voluptatum magni accusantium tempora vel! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, ab? Dolore optio hic inventore animi quis illum quo pariatur eligendi eum, labore, neque, enim sit tempore consequatur! Accusamus, reprehenderit quo?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero officia magni, eum culpa id alias minus
+                quae, excepturi necessitatibus aliquid laboriosam expedita tempora odit consectetur adipisci! Saepe
+                quidem labore eius! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptate
+                necessitatibus tempore sint nam nihil sapiente. Ducimus quos modi eos illo magnam quae doloribus
+                repellendus? Voluptatum magni accusantium tempora vel! Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Itaque, ab? Dolore optio hic inventore animi quis illum quo pariatur eligendi eum,
+                labore, neque, enim sit tempore consequatur! Accusamus, reprehenderit quo?
             </p>
         </div>
     </main>
@@ -96,24 +150,38 @@
     <div style="height: 153px;" class="d-none d-md-block d-lg-none"></div>
     <div style="height: 129px;" class="d-none d-lg-block"></div>
 
-    <footer class="border-top fixed-bottom text-muted bg-light">
+    <footer class="border-top text-muted bg-light mt-auto">
         <div class="container">
             <div class="row py-3">
-                <div class="col-12 col-md-4 text-center text-md-left">
-                    &copy; 2020 - Quitanda Online ltda ME<br>
-                    Rua Virtual Inexistente, 171, Computolandia/PC<br>
-                    CPNJ 99.999.999/001-99
+                <div class="col-12 col-md-4 text-center">
+                    &copy; 2020 - Quitanda Online Ltda ME<br>
+                    Rua Virtual Inexistente, 171, Compulândia/PC <br>
+                    CPNJ 99.999.999/0001-99
                 </div>
                 <div class="col-12 col-md-4 text-center">
-                    <a href="/privacidade.html" class="text-decoration-none text-dark">Politica de Privacidade</a>
-                    <a href="/termos.html" class="text-decoration-none text-dark">Termos de Uso</a>
-                    <a href="/quemsomos.html" class="text-decoration-none text-dark">Quem somos</a>
-                    <a href="/tocas.html" class="text-decoration-none text-dark">Trocas e Devoluções</a>
+                    <a href="privacidade.html" class="text-decoration-none text-dark">
+                        Política de Privacidade
+                    </a><br>
+                    <a href="termos.html" class="text-decoration-none text-dark">
+                        Termos de Uso
+                    </a><br>
+                    <a href="quemsomos.html" class="text-decoration-none text-dark">
+                        Quem Somos
+                    </a><br>
+                    <a href="trocas.html" class="text-decoration-none text-dark">
+                        Trocas e Devoluções
+                    </a>
                 </div>
-                <div class="col-12 col-md-4 text-center text-md-right">
-                    <a href="/contato.html" class="text-decoration-none text-dark">Contato pelo site</a>
-                    E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">email@dominio.com</a>
-                    Telefone: <a href="phone:2899999999" class="text-decoration-none text-dark">(28) 99999-99999</a>
+                <div class="col-12 col-md-4 text-center">
+                    <a href="contato.html" class="text-decoration-none text-dark">
+                        Contato pelo Site
+                    </a><br>
+                    E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
+                        email@dominio.com
+                    </a><br>
+                    Telefone: <a href="phone:28999990000" class="text-decoration-none text-dark">
+                        (28) 99999-0000
+                    </a>
                 </div>
             </div>
         </div>
