--- a/quitanda/termos.html
+++ b/quitanda/termos.html
@@ -127,25 +127,38 @@
     <div style="height: 153px;" class="d-none d-md-block d-lg-none"></div>
     <div style="height: 129px;" class="d-none d-lg-block"></div>
 
-    <footer class="border-top fixed-bottom text-muted bg-light">
+    <footer class="border-top text-muted bg-light mt-auto">
         <div class="container">
             <div class="row py-3">
-                <div class="col-12 col-md-4 text-center text-md-left">
-                    &copy; 2020 - Quitanda Online ltda ME<br>
-                    Rua Virtual Inexistente, 171, Computolandia/PC<br>
-                    CPNJ 99.999.999/001-99
+                <div class="col-12 col-md-4 text-center">
+                    &copy; 2020 - Quitanda Online Ltda ME<br>
+                    Rua Virtual Inexistente, 171, Compulândia/PC <br>
+                    CPNJ 99.999.999/0001-99
                 </div>
                 <div class="col-12 col-md-4 text-center">
-                    <a href="/privacidade.html" class="text-decoration-none text-dark">Politica de Privacidade</a>
-                    <a href="/termos.html" class="text-decoration-none text-dark">Termos de Uso</a>
-                    <a href="/quemsomos.html" class="text-decoration-none text-dark">Quem somos</a>
-                    <a href="/tocas.html" class="text-decoration-none text-dark">Trocas e Devoluções</a>
+                    <a href="privacidade.html" class="text-decoration-none text-dark">
+                        Política de Privacidade
+                    </a><br>
+                    <a href="termos.html" class="text-decoration-none text-dark">
+                        Termos de Uso
+                    </a><br>
+                    <a href="quemsomos.html" class="text-decoration-none text-dark">
+                        Quem Somos
+                    </a><br>
+                    <a href="trocas.html" class="text-decoration-none text-dark">
+                        Trocas e Devoluções
+                    </a>
                 </div>
-                <div class="col-12 col-md-4 text-center text-md-right">
-                    <a href="/contato.html" class="text-decoration-none text-dark">Contato pelo site</a>
-                    E-mail: <a href="mailto:email@dominio.com"
-                        class="text-decoration-none text-dark">email@dominio.com</a>
-                    Telefone: <a href="phone:2899999999" class="text-decoration-none text-dark">(28) 99999-99999</a>
+                <div class="col-12 col-md-4 text-center">
+                    <a href="contato.html" class="text-decoration-none text-dark">
+                        Contato pelo Site
+                    </a><br>
+                    E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
+                        email@dominio.com
+                    </a><br>
+                    Telefone: <a href="phone:28999990000" class="text-decoration-none text-dark">
+                        (28) 99999-0000
+                    </a>
                 </div>
             </div>
         </div>
