--- a/quitanda/confirmarcadastro.html
+++ b/quitanda/confirmarcadastro.html
@@ -17,7 +17,7 @@
 
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <title>Quitanda Online</title>
+    <title>Quitanda Online :: Novo Cliente Cadastrado</title>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
