--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -49,7 +49,7 @@
             <div class="align-self-end">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/cadastro.html">Quero Me Cadastrar</a>
+                        <a class="nav-link text-white" href="cadastro.html">Quero Me Cadastrar</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="#">Entrar</a>
