--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -42,7 +42,7 @@
                         <a class="nav-link text-white" href="/index.html">Principal</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/contato.html">Contato</a>
+                        <a class="nav-link text-white" href="contato.html">Contato</a>
                     </li>
                 </ul>
             </div>
