projeto quitanda - corrige link para pagina quem somos

--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -523,7 +523,7 @@
                 <div class="col-12 col-md-4 text-center">
                     <a href="privacidade.html" class="text-decoration-none text-dark">Politica de Privacidade</a>
                     <a href="termos.html" class="text-decoration-none text-dark">Termos de Uso</a>
-                    <a href="/quemsomos.html" class="text-decoration-none text-dark">Quem somos</a>
+                    <a href="quemsomos.html" class="text-decoration-none text-dark">Quem somos</a>
                     <a href="/tocas.html" class="text-decoration-none text-dark">Trocas e Devoluções</a>
                 </div>
                 <div class="col-12 col-md-4 text-center text-md-right">
