projeto quitanda - corrige link para pagina trocas

--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -524,7 +524,7 @@
                     <a href="privacidade.html" class="text-decoration-none text-dark">Politica de Privacidade</a>
                     <a href="termos.html" class="text-decoration-none text-dark">Termos de Uso</a>
                     <a href="quemsomos.html" class="text-decoration-none text-dark">Quem somos</a>
-                    <a href="/tocas.html" class="text-decoration-none text-dark">Trocas e Devoluções</a>
+                    <a href="trocas.html" class="text-decoration-none text-dark">Trocas e Devoluções</a>
                 </div>
                 <div class="col-12 col-md-4 text-center text-md-right">
                     <a href="/contato.html" class="text-decoration-none text-dark">Contato pelo site</a>
