--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -527,7 +527,7 @@
                     <a href="trocas.html" class="text-decoration-none text-dark">Trocas e Devoluções</a>
                 </div>
                 <div class="col-12 col-md-4 text-center text-md-right">
-                    <a href="/contato.html" class="text-decoration-none text-dark">Contato pelo site</a>
+                    <a href="contato.html" class="text-decoration-none text-dark">Contato pelo site</a>
                     E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">email@dominio.com</a>
                     Telefone: <a href="phone:2899999999" class="text-decoration-none text-dark">(28) 99999-99999</a>
                 </div>
