--- a/quitanda/base.html
+++ b/quitanda/base.html
@@ -33,7 +33,7 @@
                         <a class="nav-link text-white" href="index.html">Principal</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/contato.html">Contato</a>
+                        <a class="nav-link text-white" href="contato.html">Contato</a>
                     </li>
                 </ul>
             </div>
