projeto quitanda - pagina de contato

--- a/quitanda/contato.html
+++ b/quitanda/contato.html
@@ -18,7 +18,7 @@
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
 
-    <title>Quitanda Online</title>
+    <title>Quitanda Online :: Contato</title>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
