--- a/quitanda/login.html
+++ b/quitanda/login.html
@@ -18,7 +18,7 @@
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
 
-    <title>Quitanda Online :: Titulo da Pagina</title>
+    <title>Quitanda Online :: Login</title>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
