--- a/quitanda/confirmarcadastro.html
+++ b/quitanda/confirmarcadastro.html
@@ -50,7 +50,9 @@
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0"
                                     title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="carrinho.html" class="nav-link text-white">
-                                    <i class="bi-cart" style="font-size:24px;line-height:24px;"></i>
+                                    <svg class="bi" width="24" height="24" fill="currentColor">
+                                        <use xlink:href="/bi.svg#cart3"></use>
+                                    </svg>
                                 </a>
                             </li>
                         </ul>
