--- a/quitanda/carrinho.html
+++ b/quitanda/carrinho.html
@@ -51,7 +51,9 @@
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0"
                                     title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="carrinho.html" class="nav-link text-white">
-                                    <i class="bi-cart" style="font-size:24px;line-height:24px;"></i>
+                                    <svg class="bi" width="24" height="24" fill="currentColor">
+                                        <use xlink:href="/bi.svg#cart3"></use>
+                                    </svg>
                                 </a>
                             </li>
                         </ul>
@@ -210,6 +212,18 @@
                                     <span class="text-dark">Valor Item: R$ 15,96</span>
                                 </div>
                             </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item py-3">
+                        <div class="text-end">
+                            <h4 class="text-dark mb-3">
+                                Valor Total: R$ 63,84
+                            </h4>
+                            <a href="index.html" class="btn btn-outline-success btn-lg">
+                                Continuar Comprando
+                            </a>
+                            <a href="fechamento_itens.html" class="btn btn-danger btn-lg ms-2 mt-xs-3">Fechar
+                                Compra</a>
                         </div>
                     </li>
                 </ul>
